--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
           <ul class="contacts-list list">
             <li class="contacts-list-item">
               <a href="mailto:info@devstudio.com" class="link">
-                <img
-                  class="contacts-list link"
-                  src="./images/e-mail.svg"
-                  alt="e-mail"
-                />info@devstudio.com</a
-              >
+                <svg class="mail">
+                  <use href="./images/sprite.svg#icon-e-mail"></use>
+                </svg>
+                info@devstudio.com
+              </a>
             </li>
             <li class="contacts-list-item">
               <a href="tel:+380961111111" class="link"
@@ -403,33 +402,47 @@
           <ul class="clients list">
             <li class="clients-item">
               <a class="clients-link" href="">
-                <img src="./images/Client1.svg" alt="Клиент компании"
-              /></a>
-            </li>
-            <li class="clients-item">
-              <a class="clients-link" href="">
-                <img src="./images/Client2.svg" alt="Клиент компании" />
+                <svg class="clients-item-icon">
+                  <use href="./images/sprite.svg#icon-client1"></use>
+                </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="">
-                <img src="./images/Client3.svg" alt="Клиент компании"
-              /></a>
-            </li>
-            <li class="clients-item">
-              <a class="clients-link" href="">
-                <img src="./images/Client4.svg" alt="Клиент компании" />
+                <svg class="clients-item-icon">
+                  <use href="./images/sprite.svg#icon-client2"></use>
+                </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="">
-                <img src="./images/Client5.svg" alt="Клиент компании" />
+                <svg class="clients-item-icon">
+                  <use href="./images/sprite.svg#icon-client3"></use>
+                </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="">
-                <img src="./images/Client6.svg" alt="Клиент компании"
-              /></a>
+                <svg class="clients-item-icon">
+                  <use href="./images/sprite.svg#icon-client4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="">
+                <svg class="clients-item-icon">
+                  <use href="./images/sprite.svg#icon-client5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <div class="clients-item-link">
+                <a class="clients-link" href="">
+                  <svg class="clients-item-icon">
+                    <use href="./images/sprite.svg#icon-client6"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
           </ul>
         </div>
