--- a/index.html
+++ b/index.html
@@ -43,20 +43,22 @@
         <div class="contacts">
           <ul class="contacts-list list">
             <li class="contacts-list-item">
-              <a href="mailto:info@devstudio.com" class="link">
-                <svg class="mail">
+              <a
+                href="mailto:info@devstudio.com"
+                class="contacts-list-icon link"
+              >
+                <svg class="mail-smartphone-icon" width="16px" height="11.2px">
                   <use href="./images/sprite.svg#icon-e-mail"></use>
                 </svg>
                 info@devstudio.com
               </a>
             </li>
             <li class="contacts-list-item">
-              <a href="tel:+380961111111" class="link"
-                ><img
-                  class="contacts-list link"
-                  src="./images/smartphone.svg"
-                  alt="tel"
-                />+38 096 111 11 11</a
+              <a href="tel:+380961111111" class="contacts-list-icon link">
+                <svg class="mail-smartphone-icon" width="10px" height="14.94px">
+                  <use href="./images/sprite.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
               >
             </li>
           </ul>
@@ -402,47 +404,45 @@
           <ul class="clients list">
             <li class="clients-item">
               <a class="clients-link" href="">
-                <svg class="clients-item-icon">
+                <svg class="clients-item-icon" width="44.27px" height="49.23px">
                   <use href="./images/sprite.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="">
-                <svg class="clients-item-icon">
+                <svg class="clients-item-icon" width="40px" height="52px">
                   <use href="./images/sprite.svg#icon-client2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="">
-                <svg class="clients-item-icon">
+                <svg class="clients-item-icon" width="41px" height="42.6px">
                   <use href="./images/sprite.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="">
-                <svg class="clients-item-icon">
+                <svg class="clients-item-icon" width="79.66px" height="42.02px">
                   <use href="./images/sprite.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="">
-                <svg class="clients-item-icon">
+                <svg class="clients-item-icon" width="59px" height="47px">
                   <use href="./images/sprite.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
-              <div class="clients-item-link">
-                <a class="clients-link" href="">
-                  <svg class="clients-item-icon">
-                    <use href="./images/sprite.svg#icon-client6"></use>
-                  </svg>
-                </a>
-              </div>
+              <a class="clients-link" href="">
+                <svg class="clients-item-icon" width="88.48px" height="45.44px">
+                  <use href="./images/sprite.svg#icon-client6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -518,6 +518,14 @@
               </a>
             </li>
           </ul>
+          <div class="follow-us">
+            <button class="button button-follow-us">
+              Подписаться
+              <svg class="button-follow-us-icon" width="24" height="24">
+                <use href="./images/sprite.svg#icon-airplain"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </footer>
