--- a/portfolio.html
+++ b/portfolio.html
@@ -35,22 +35,18 @@
         <div class="contacts">
           <ul class="contacts-list list">
             <li class="contacts-list-item">
-              <a href="mailto:info@devstudio.com" class="contacts-list link">
-                <img
-                  class="contacts-list link"
-                  src="./images/e-mail.svg"
-                  alt="e-mail"
-                />
+              <a href="mailto:info@devstudio.com" class="contacts-list-icon link">
+                <svg class="mail-smartphone-icon" width="16px" height="11.2px">
+                  <use href="./images/sprite.svg#icon-e-mail"></use>
+                </svg>
                 info@devstudio.com</a
               >
             </li>
             <li class="contacts-list-item">
-              <a href="tel:+380961111111" class="contacts-list link">
-                <img
-                  class="contacts-list link"
-                  src="./images/smartphone.svg"
-                  alt="tel"
-                />
+              <a href="tel:+380961111111" class="contacts-list-icon link">
+                <svg class="mail-smartphone-icon" width="10px" height="14.94px">
+                  <use href="./images/sprite.svg#icon-smartphone"></use>
+                </svg>
                 +38 096 111 11 11</a
               >
             </li>
@@ -98,7 +94,6 @@
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
-                
               </a>
               </div>
             </li>
@@ -342,6 +337,13 @@
               </a>
             </li>
           </ul>
+          <div class="follow-us">
+            <button class="button button-follow-us">Подписаться
+             <svg class="button-follow-us-icon" width="24" height="24">
+                <use href="./images/sprite.svg#icon-airplain"></use>
+              </svg> 
+            </button>
+          </div>
         </div>
       </div>
     </footer>
