--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </header>
     <main>
       <!-- HERO секция-->
-      <section class="section-hero section overlay">
+      <section class="section-hero overlay">
         <h1 class="title-hero">
           Эффективные решения <br />
           для вашего бизнеса
@@ -77,9 +77,9 @@
         </button>
       </section>
       <!-- Наши особенности-->
-      <section class="section section-features">
+      <section class="section section-features container">
         <h2 class="section-title visually-hidden">Наши особенности</h2>
-        <ul class="features-list list container">
+        <ul class="features-list list">
           <li class="features-list-item">
             <div class="features-list-item-link">
               <svg class="features-list-item-icon" width="70" height="70">
@@ -136,31 +136,32 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="activities-list list">
             <li class="activitties-list-item">
-              <img
-                class="image"
-                src="./images/laptop.jpg"
-                alt="Лаптоп"
-                width="370"
-              />
-              <h3 class="title activities-list-title">Десктопные приложения</h3>
+              <div class="image">
+                <img src="./images/laptop.jpg" alt="Лаптоп" width="370" />
+                <h3 class="title activities-list-title">
+                  Десктопные приложения
+                </h3>
+              </div>
             </li>
             <li class="activitties-list-item">
-              <img
-                class="image"
-                src="./images/mobile.jpg"
-                alt="Мобильный телефон"
-                width="370"
-              />
-              <h3 class="title activities-list-title">Мобильные приложения</h3>
+              <div class="image">
+                <img
+                  src="./images/mobile.jpg"
+                  alt="Мобильный телефон"
+                  width="370"
+                />
+                <h3 class="title activities-list-title">
+                  Мобильные приложения
+                </h3>
+              </div>
             </li>
             <li class="activitties-list-item">
-              <img
-                class="image"
-                src="./images/desktop.jpg"
-                alt="Десктоп"
-                width="370"
-              />
-              <h3 class="title activities-list-title">Дизайнерские решения</h3>
+              <div class="image">
+                <img src="./images/desktop.jpg" alt="Десктоп" width="370" />
+                <h3 class="title activities-list-title">
+                  Дизайнерские решения
+                </h3>
+              </div>
             </li>
           </ul>
         </div>
