--- a/index.html
+++ b/index.html
@@ -30,13 +30,17 @@
           </a>
           <ul class="site-nav-list list">
             <li class="site-nav-list-item">
-              <a href="./index.html" class="link">Студия</a>
+              <a href="./index.html" class="site-nav-list-item-link link"
+                >Студия</a
+              >
             </li>
             <li class="site-nav-list-item">
-              <a href="./portfolio.html" class="link">Портфолио</a>
+              <a href="./portfolio.html" class="site-nav-list-item-link link"
+                >Портфолио</a
+              >
             </li>
             <li class="site-nav-list-item">
-              <a href="" class="link">Контакты</a>
+              <a href="" class="site-nav-list-item-link link">Контакты</a>
             </li>
           </ul>
         </nav>
