--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
           </a>
           <ul class="site-nav-list list">
             <li class="site-nav-list-item">
-              <a href="./index.html" class="site-nav-list-item-link link"
+              <a
+                href="./index.html"
+                class="active-list-item site-nav-list-item-link link"
                 >Студия</a
               >
             </li>
