--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
     </header>
     <main>
       <!--Список кнопок Портфолио-->
-      <section class="container">
+      <section class="container section-portfolio">
         <h1 class="visually-hidden">Портфолио</h1>
         <ul class="filter-groups list">
           <li class="filter-groups-item">
